# Trade-otomatis-deriv-v2

./: .dashboard_secret  .replit  =21.0  DEPLOY_KOYEB.md  Dockerfile  accumulator_strategy.py  deriv_ws.py  digitpad_strategy.py  entry_filter.py  event_bus.py  hybrid_money_manager.py  i18n.py  koyeb.yaml  ldp_strategy.py  main.py  pair_scanner.py  pyproject.toml  replit.md  requirements.txt  strategy.py  symbols.py  terminal_strategy.py  tick_analyzer.py  trading.py  user_auth.py  web_server.py
logs/: active_chat_id.txt  analytics_20251207_081137.json  analytics_20251207_085733.json  analytics_20251207_090057.json  analytics_20251207_090411.json  analytics_20251207_090727.json  analytics_20251207_091343.json  analytics_20251207_093925.json  analytics_20251207_100027.json  analytics_20251207_102737.json  analytics_20251207_104319.json  analytics_20251207_160929.json  analytics_20251207_163523.json  analytics_20251208_030959.json  chat_mapping.json  session_20251207_081137.txt  session_20251207_085733.txt  session_20251207_090057.txt  session_20251207_090411.txt  session_20251207_090727.txt  session_20251207_091343.txt  session_20251207_093925.txt  session_20251207_100027.txt  session_20251207_102737.txt  session_20251207_104319.txt  session_20251207_160929.txt  session_20251207_163523.txt  session_20251208_030959.txt  session_recovery.json  trades_20251207.csv  trades_20251207_backup_20251207_090028.csv  trades_20251207_backup_20251207_090042.csv  trades_20251207_backup_20251207_090056.csv  trades_20251207_backup_20251207_090148.csv  (+390 more)
static/: dashboard.js  index.html  (+1 more)
